k8s/applications/pihole/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: pihole
          image: pihole/pihole:2024.02.2
          ports:
            - name: ingress
              containerPort: 80
            - name: https
              containerPort: 443
            - name: dns-tcp
              containerPort: 53
            - name: dns-udp
              containerPort: 53
              protocol: UDP
          volumeMounts:
            - name: pihole
              mountPath: /etc/pihole
              subPath: pihole
            - name: pihole
              mountPath: /etc/dnsmasq.d
              subPath: dnsmasq
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
