k8s/applications/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: external
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: external
spec:
  type: LoadBalancer
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
