k8s/applications/pihole/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("pihole.mchill.io")
      kind: Rule
      services:
        - name: pihole-tcp
          port: 80
      middlewares:
        - name: pihole
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-internal
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("pihole.mchill.lan")
      kind: Rule
      services:
        - name: pihole-tcp
          port: 80
      middlewares:
        - name: pihole
